--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://isterdam.github.io/"
+baseURL = "https://hub-ai-lund.github.io/"
 languageCode = "en-us"
 title = 'Hub AI'
 defaultContentLanguage = "en"
