--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ title = "Blogposts"
 enable = true
 title = 'Our Goals'
 body = '''
-As part of Akademiska Föreningen (AF), we aim to provide students at Lund University who are interested in AI with tools to learn, possibilities to network and a community of like-minded individuals
+Hub AI is a student organisation that organises various types of events related to the applications of AI for Lund University students. Our events range from guest lectures and panel discussions to Python workshops and social events. In addition, since Hub AI hosts interdisciplinary events, we attract students with different backgrounds ranging from engineering, biotechnology and computer science to economics, political science and psychology
 '''
 
 [[params.one.icon]]
