added past events

--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ unsafe= true
 fancyTitle = '&nbsp<img width="250px" src="/complete_white_logo.png"/>&nbsp'
 copyright = "Hub AI"
 description = "Bringing people from all disciplines together to talk about Artificial Intelligence"
-startbuttonText = "Upcoming Events"
+startbuttonText = "Events"
 startbuttonLink = "/events"
 body_is_markdown = true
 
