--- a/config.toml
+++ b/config.toml
@@ -66,59 +66,47 @@ body = 'As an organization, we aim to create a community for like-minded people,
 
 [params.three]
 enable = true
-title = 'The Committee'
+title = 'The Board'
 body = '''
-The committee members are the main drivers shaping what type of events we host and are responsible for the day-to-day activities of the organization
+The board members are the main drivers shaping what type of events we host and are responsible for the day-to-day activities of the organization
 '''
 
 # NOTE! File size really matters for the website's responsiveness. Decrease the size and compress images.
 [[params.three.feature]]
-headshot = '<img src="team/Maja.JPG"/ class="headshot">'
 title = "President"
-name = "Maja Isaksson"
+name = "Maja"
 body = "I am currently pursuing my Master of Laws. In light of recent technological developments, the field of law has been shaped by our digital society. The emergence of AI within our society signifies a unique juncture where historical reflections converge with future possibilities, challenging traditional notions of human-centric creation and responsibility. Exploring how to address these changes in terms of obligations, rights, and responsibilities is truly fascinating"
 
 [[params.three.feature]]
-headshot = '<img src="team/Fiona.JPG"/ class="headshot">'
-name = "Fiona Krummenacher"
+name = "Olivia"
 title = "Vice President"
-body = "I am currently pursuing my Master's degree in Psychology with specializations in Neuroscience and Organizational Psychology. My deep fascination with AI arises from the big impact it will have in shaping our future. I believe that it is essential for us, as young individuals, to gain a comprehensive understanding of AI - not only in terms of how it works but also its potential applications within our respective fields of study"
+body = "I am currently pursuing my Master of Laws. In light of recent technological developments, the field of law has been shaped by our digital society. The emergence of AI within our society signifies a unique juncture where historical reflections converge with future possibilities, challenging traditional notions of human-centric creation and responsibility. Exploring how to address these changes in terms of obligations, rights, and responsibilities is truly fascinating"
 
 [[params.three.feature]]
-headshot = '<img src="team/Grace.JPG"/ class="headshot">'
-name = "Grace Chung"
+name = "Herman"
 title = "Head of External Partnerships"
-body = "As a Master's student in Entrepreneurship and Innovation, I am curious about the latest business opportunities, particularly holding a strong belief that Artificial Intelligence is going to change our lives. Having said that, proper integration and general public education are the keys for us to fully utilize this relatively new concept. I believe Hub AI will be a very good platform to facilitate that"
+body = "As a Business and Economics student with a strong interest in technology, I’m fascinated by AI’s impact on businesses, societal change, economies, and innovation for sustainable development. In my role at Hub AI, I aim to connect the organization and students with industry leaders and innovators, fostering partnerships that showcase AI’s real-world applications. My goal is to create opportunities for members to gain valuable insights into AI’s transformative potential and its broader societal and economic implications."
 
 [[params.three.feature]]
-headshot = '<img src="team/Leon.JPG"/ class="headshot">'
-name = "Leon Wolf"
-title = "Head of External Partnerships"
-body = "As a Master's student specializing in Social Scientific Data Analysis, my passion converges at the intersection of Artificial Intelligence and societal challenges. With a strong foundation in European Studies, my interdisciplinary perspective aligns seamlessly with my commitment to leveraging AI addressing socio-political and socio-economic challenges in our data-driven era, shaping my profound interest in the field"
+name = "Johan"
+title = "Head of Education"
+body = "My interests and studies in engineering risk management and mathematical statistics center around exploring the intersection of AI, mathematics, and practical applications. As Head of Education at Hub AI, I combine my passion for teaching with my interest for AI and programming, facilitating workshops that help others explore these fields. My academic and professional pursuits span risk management, machine learning, and statistical modeling, all tied together by a focus on how mathematical insights can drive advancements in AI and solve real-world problems."
 
 [[params.three.feature]]
 headshot = '<img src="team/Tawfique.JPG"/ class="headshot">'
-name = "Tawfique Elahi"
+name = "Julia"
 title = "Head of Events"
-body = "Currently pursuing a Master's in Information Systems, my research interests extend beyond my core studies to encompass HCI and AI. My curiosity has recently steered me towards the critical fields of AI ethics and safety, with a keen focus on their implications in the global south. This emerging passion is guiding my exploration into the ethical nuances of AI technology and its varied effects on communities worldwide"
+body = "As a Bachelor's student in Biomedicine, I’m intrigued by the dynamic relationship between AI and neuroscience. New AI designs can be inspired by the knowledge of neural networks, and conversely, computational knowledge can help create tools to further understand brain function. I find the potential and the intersectionality of these topics very exciting, and hope to be able to share my passion here, at Hub AI."
 
 [[params.three.feature]]
-headshot = '<img src="team/Julia.JPG"/ class="headshot">'
-name = "Julia Okuniewska"
-title = "Head of Events"
-body = "As a Bachelor's student in Biomedicine, I’m absolutely fascinated by the dynamic relationship between AI and neuroscience. New AI designs can be inspired by the knowledge of neural networks, and conversely, computational knowledge can help create tools to further understand brain function. I find the potential and the intersectionality of these topics very exciting, and I hope to be able to share my passion here at Hub AI"
+name = "Fabio"
+title = "Head of Development"
+body = "I'm currently studying for a Master's in Social Scientific Data Analysis after finishing my Bachelor's in Sociology. I think it's great that data is becoming more and more important in society thanks to AI. This is changing how we see social relationships and behaviors, giving us some great insights but also raising some ethical questions about privacy and inequality. I'm really interested in how AI affects societal norms and structures. My aim is to use data insights to tackle social challenges in this fast-changing field."
 
 [[params.three.feature]]
-headshot = '<img src="team/Ralf.JPG"/ class="headshot">'
-name = "Ralf Vesterberg"
-title = "Head of Marketing"
-body = "I am a student of Social Anthropology with a prior background in Applied AI. My studies have led me down a unique path where I've delved into both human societies and technological advancements. This blend showcases my genuine interest in understanding how AI intersects with cultural dynamics"
-
-[[params.three.feature]]
-headshot = '<img src="team/Jianan.JPG"/ class="headshot">'
-name = "Jianan Wei"
+name = "Karin"
 title = "Treasurer"
-body = "As a Sociology of Law Master's student and former legal counsel in an AI startup, my interest lies in exploring AI governance to balance innovation and human rights, especially from SMEs' viewpoint. I aim to navigate this intersection, ensuring AI advancements benefit society while safeguarding fundamental rights, forming the basis of my academic and professional pursuits"
+body = "My interest in AI, as a Bachelor’s student in Business Administration, stems from a perceived lack of focus on the matter in the current curriculum. It is well-known that AI will affect the current roles in many fields by automating and streamlining inefficient processes. I believe that gaining knowledge about the competences expected by employers due to these changes is considered important by many of today’s students. I seek to provide this knowledge through Hub AI, while also learning more about what the future may hold for AI advancements."
 
 #[[params.three.feature]]
 #headshot = '<img src="team/anonymous.png"/ class="headshot">'
