--- a/config.toml
+++ b/config.toml
@@ -85,7 +85,7 @@ title = "Vice President"
 body = "I am a law student pursuing a Master of Laws and a Master of European Business Law. My interest lies primarily in ethical and philosophical dilemmas, such as the question of whether AI systems can be creative or not. My drive within Hub AI is to provide our members with tools to take advantage of the benefits of AI technology while being mindful of the consequences that it might bring."
 
 [[params.three.feature]]
-headshot = '<img src="team/anonymous.png"/ class="headshot">'
+headshot = '<img src="team/Hermann.jpeg"/ class="headshot">'
 name = "Herman"
 title = "Head of External Partnerships"
 body = "As a Business and Economics student with a strong interest in technology, I’m fascinated by AI’s impact on businesses, societal change, economies, and innovation for sustainable development. In my role at Hub AI, I aim to connect the organization and students with industry leaders and innovators, fostering partnerships that showcase AI’s real-world applications. My goal is to create opportunities for members to gain valuable insights into AI’s transformative potential and its broader societal and economic implications."
