--- a/config.toml
+++ b/config.toml
@@ -76,7 +76,7 @@ The board members are the main drivers shaping what type of events we host and a
 headshot = '<img src="team/oltina2.jpg"/ class="headshot">'
 title = "President"
 name = "Oltina"
-body = "I am a Master’s student in European Business Law with professional experience at the intersection of AI and other fields. Passionate about innovation, I wish to integrate it into our lives in a fair and ethical way. I stay informed by attending weekly AI engineering classes and remaining open to new opportunities for growth. At Hub AI, I lead he organization toward our goals, overseeing administration, coordinating within the team and with external partners, and serving as spokesperson at events and meetings. I believe that approaching AI with curiosity, kindness, and respect will create a bright future for our work."
+body = "I am a Master’s student in European Business Law with professional experience at the intersection of AI and other fields. Passionate about innovation, I wish to integrate it into our lives in a fair and ethical way. I stay informed by attending weekly AI engineering classes and remaining open to new opportunities for growth. At Hub AI, I lead the organization toward our goals, overseeing administration, coordinating within the team and with external partners, and serving as spokesperson at events and meetings. I believe that approaching our work with curiosity, kindness, and respect for others will unlock best opportunities in AI projects."
 
 [[params.three.feature]]
 headshot = '<img src="team/mariia.jpg"/ class="headshot">'
