--- a/config.toml
+++ b/config.toml
@@ -87,7 +87,7 @@ body = "I am a Master’s student in Human Rights Studies at Lund University and
 headshot = '<img src="team/dasha2.jpg"/ class="headshot">'
 name = "Daria Kahtanova"
 title = "Head of External Partnerships"
-body = "As a Business and Economics student with a strong interest in technology, I’m fascinated by AI’s impact on businesses, societal change, economies, and innovation for sustainable development. In my role at Hub AI, I aim to connect the organization and students with industry leaders and innovators, fostering partnerships that showcase AI’s real-world applications. My goal is to create opportunities for members to gain valuable insights into AI’s transformative potential and its broader societal and economic implications."
+body = "Currently I am pursuing a MSc in Development Studies majoring in Politics. My interests lie within the public and security domains, as well as economic development of the states. Thus, I could not help but wonder how the new technology, AI specifically, shape the world we live in? Also, having a passion for diplomacy, I love to negotiate with others, which led me to the position of Head of the External Partnership Committee. At HubAI, I connect businesses and organisations with students, and make such cooperations smooth and fruitful."
 
 [[params.three.feature]]
 headshot = '<img src="team/anonymous.png"/ class="headshot">'
