added pics for luzie and alexander

--- a/config.toml
+++ b/config.toml
@@ -90,16 +90,16 @@ title = "Head of External Partnerships"
 body = "Currently I am pursuing a MSc in Development Studies majoring in Politics. My interests lie within the public and security domains, as well as economic development of the states. Thus, I could not help but wonder how the new technology, AI specifically, shape the world we live in? Also, having a passion for diplomacy, I love to negotiate with others, which led me to the position of Head of the External Partnership Committee. At HubAI, I connect businesses and organisations with students, and make such cooperations smooth and fruitful."
 
 [[params.three.feature]]
-headshot = '<img src="team/anonymous.png"/ class="headshot">'
+headshot = '<img src="team/alexander.jpg"/ class="headshot">'
 name = "Alexander Tzikas"
 title = "Head of Education"
 body = "I am a bachelor student in Business Administration and Economics with a personal interest in AI, machine learning, and technology in general. My particular interest is in how AI can be applied in finance and data analysis, and how these applications can drive growth and innovation. As Head of Education, I help spread knowledge about topics related to the more technical side of AI. Together with my team, I organize workshops in programming and the practical applications of various AI tools."
 
 [[params.three.feature]]
-headshot = '<img src="team/anonymous.png"/ class="headshot">'
+headshot = '<img src="team/luzie.webp"/ class="headshot">'
 name = "Luzie Nickel"
 title = "Head of Events"
-body = ""
+body = "I am a third year Bachelor’s student in Biomedicine and really interested in how to connect AI use and Science and especially use it to further understand complicated systems. Other than that, my interest also lies in ethical questions and dilemmas concerning the use of AI. As the head of events, I am working together with other committees to bring everything together and make the events something you look forward to."
 
 [[params.three.feature]]
 headshot = '<img src="team/katya2.jpg"/ class="headshot">'
